# takagi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: release.yml
takagi/: app.py  auth.py  cli.py  responses.py  security.py  serializable.py  settings.py  utils.py
